Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 31.01.2025 13:43:37 | Praha: 6°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 01.02.2025 06:03:02 | Praha: -2°C, Zataženo</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a játrovou rýží</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hráškový krém se zakysanou smetanou a krutony </td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5><tr><td class="menuWeight"></td><td class="menuName">Polévky</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a játrovou rýží</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Žampionový krém se šlehačkou</td><td class="menuPrice">45,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Španělský vepřový ptáček, kynuté houskové knedlíky</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček v burgundské omáčce, dušená jasmínová rýže</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené vepřové výpečky, bramborové knedlíky maštěné cibulkou, dušený špenát</td><td class="menuPrice">161,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Francouzské brambory s uzeným masem a vejci, kyselá okurka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečené vepřové karé s brokolicí na másle, mrkvové pyré s máslem a parmazánem</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%) plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky ve smetanové omáčce s hříbky, plátkovaná vepřová panenka, strouhaný parmazán</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná čerstvou zeleninou, kuřecím masem, strouhaným sýrem, jalapeňos papričkou a česnekovým dresinkem, hranolky, tatarka</td><td class="menuPrice">188,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné medovo-hořčičné omáčce, pečené brambory ve slupce s plátky česneku</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">Chystáme</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,- Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Albín ALlk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda 27,-      0,5L Citronáda 34,-</td><td class="menuPrice"></td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Quesadilla plněná vepřovým trhaným masem, sýrem, kukuřicí, anglickou slaninou a jalapeňos papričkou, hranolky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky maštěné cibulkou, bílé zelí</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kostky na slanině, dušená jasmínová rýže</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava:150g Steak z kuřecích prsou na fazolových luscích, sýrové grusetky promíchané rukolou, volské oko</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Kynutý koláč s naší banánovou marmeládou, tvarohem a meruňkou</td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka, volské oko</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z kuřecích prsou obalené v cornflakes, vařené brambory s máslem a šnitlíkem, citron</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusilli  carbonara, strouhaný parmazán</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné houbové omáčce, hranolky</td><td class="menuPrice">219,-</td></tr><tr><td class="menuWeight">Únor</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice">Únor</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Oslav s námi 20-ti leté výročí spolupráce s pivovarem Staropramen bezkonkurenčními cenami plechovkových piv. Ceny od 12,90 do 15,90 jsou platné 9.12. - 29.12.2024</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Citronáda</td><td class="menuPrice">27,- / 34,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -29,7 +23,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,34 +39,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Pátek 31.1.2025 </div>
+<div class="nadpis">Sobota 1.2.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Zelná s paprikovou klobáskou 1</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>200g Domácí karbanátek s anglickou slaninou, bramborová kaše, rajčatový salát 1, 3, 7 </div>
-<div class="cena">175 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Zeleninový bulgur, marinovaná kuřecí prsa v bylinkách a jogurtu 1, 7</div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Hovězí na smetaně, HK, brusinkový terč 1, 3, 7, 9, 10</div>
-<div class="cena">185 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>350g Zapečené lasagně se špenátem, sušenými rajčaty a sýrem 1, 7</div>
-<div class="cena">155 Kč</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -77,33 +52,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 31.1.2025 </div>
+<div class="nadpis">Sobota 1.2.2025 </div>
 <ul>
-<span class="popup-gallery"><li class="polevka">
-<div class="polozka">Polévka z červené čočky</div>
-<div class="cena">45 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Kuřecí paličky v BBQ omáčce, dipy, coleslaw, pečivo</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Brynzové halušky se slaninou, sypané pažitkou </div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Šišky s mákem</div>
-<div class="cena">140 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">4. </span>Změna jídelníčku vyhrazena</div>
-<div class="clear"></div>
-</li>
-</span> </ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -141,7 +92,7 @@ None
 <section id="CSAntal"></section><a href="#top">&#x1F51D;</a><tr><th>ČS Antal<br><a href="https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/">https://www.prague-catering.cz/provozovny/kantyna-ceska-sporitelna-antal/Denni-menu-Antal/</a></th></tr>
 <tr>
 <td>
-<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Celerový krém</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>300g Spaghetti Bolognesse, strouhaný sýr</td><td>145 Kč</td></tr><tr><td>300g Pad Thai</td><td>115 Kč</td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
+<table class="dennimenu"><tr><td><h3>DENNÍ NABÍDKA KANTÝNA</h3></td><td> </td></tr><tr><td><h3>Polévka</h3></td><td> </td></tr><tr><td>Slepičí vývar, maso, zelenina, nudle</td><td>32 Kč</td></tr><tr><td><h3>Hotová jídla</h3></td><td> </td></tr><tr><td>150g Rozlítaný španělský ptáček, dušená rýže</td><td>158 Kč</td></tr><tr><td>150g Smažený řízek z panenky, mačkané brambory s pažitkou</td><td>165 Kč</td></tr><tr><td>150g Kuřecí nudličky na sezamu, jasmínová rýže</td><td>149 Kč</td></tr><tr><td>150g Uzená vepřová kýta, bramborová kaše, okurka</td><td>115 Kč</td></tr><tr><td><h3>Polední menu</h3></td><td>125 Kč</td></tr><tr><td>Slepičí vývar, maso, zelenina, nudle</td><td> </td></tr><tr><td>150g Uzená vepřová kýta, bramborová kaše, okurka</td><td> </td></tr><tr><td><h3>Buffet samoobslužný na váhu</h3></td><td> </td></tr><tr><td>Kus-kus se sušenými rajčaty a čerstvým koriandrem</td><td> </td></tr><tr><td>Pečená dýně s kukuřicí, červenou cibulkou a rajčaty</td><td> </td></tr><tr><td>Pečená mexická cuketa s chilli a koriandrem</td><td> </td></tr><tr><td>Pisto-pikantní zeleninový guláš</td><td> </td></tr><tr><td>Chilaquiles s mletým vepřovým masem</td><td> </td></tr><tr><td>Jasmínová rýže</td><td> </td></tr><tr><td><h3>Týdenní nabídka</h3></td><td>145 Kč</td></tr><tr><td>domácí těstoviny 150g / 300g:</td><td> </td></tr><tr><td>s tuňákem, špenátem, cibulkou a česnekem, strouhaný parmezán</td><td> </td></tr><tr><td>Fit 150g/ 300g</td><td> </td></tr><tr><td>Quiona risotto s brokolicí, kuřecím masem, klíčky, houbami a paprikou</td><td> </td></tr><tr><td><h3>Salátový bar</h3></td><td> </td></tr><tr><td>Výběr z míchaných salátů, krájené jednodruhové sezónní zeleniny hotových salátů, doplněno o</td><td> </td></tr><tr><td>dresinky a kondimenty.</td><td> </td></tr></table>
 </td>
 </tr>
 </table>
