Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 16.02.2025 13:43:34 | Praha: -2°C, Polojasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><div class="festive-banner"><span class="holiday-message">Dobrou chuť!</span></div><a id="top"></a><table ><nav id="lunchbar"><span class="update-info">Last update: 17.02.2025 06:03:05 | Praha: -6°C, Jasno</span><ul><li><a href="#naLedarnach">NA LEDARNACH</a></li><li><a href="#Mates">MATES</a></li><li><a href="#Kuta">KUTA</a></li><li><a href="#liskaBistrouska">LIŠKA BISTROUŠKA</a></li><li><a href="#Rybarna">RYBARNA</a></li><li><a href="#uCejpu">U Čejpů</a></li><li><a href="#poctivaRestaurace">Poctivá restaurace</a></li><li><a href="#CSAntal">ČS Antal</a></li><li><a href="#zelenyPruhJidelna">Zelený pruh</a></li><li><a href="#youyouge">Čína(2)</a></li><li><a href="#antalStaska">Jídelna Antala Staška</a></li></ul></nav>
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty, ale můžete zaplatit bezkontaktně přes Qerko. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vejcem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnekový krém s krutony</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">45,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Medailonky z kuřecích prsou v sýrovém těstíčku, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">175,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, rolované bramborové knedlíky plněné špenátem maštěné cibulkou, špenát</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nudličky z kuřecích prsou se zeleninou a feferonkou, dušená jasmínová rýže</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staročeská bašta (vepřová krkovice, papriková klobása, uzené maso),kynuté houskové a  bramborové knedlíky, červené a bílé zelí</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Dorůžova pečená vepřová panenka, sýrové grusetky s listovým špenátem, sušenými tomaty a smetanou</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Restované kuřecí játra s červenou cibulkou a pórkem, smažené bramborové plátky</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti, restované fazolové lusky s anglickou slaninou, pečené brambory Greanile s plátky česneku a petrželky</td><td class="menuPrice">219,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou promíchaný majonézovým dresinkem, smažené žampiony, bylinkový toust</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight">ÚNOR</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice">ÚNOR</td></tr><tr><td class="menuWeight"></td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 12,90,- Kč. Staropramen 11° za 13,90,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Kuřecí nudličky na paprice, kynuté houskové knedlíky</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček v rajské omáčce, kynuté houskové knedlíky</td><td class="menuPrice">169,-</td></tr><tr><td class="menuWeight">400g</td><td class="menuName">Pečená vepřová žebra v marinádě, smažené bramborové plátky, hořčice, křen, cibule, beraní roh</td><td class="menuPrice">187,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName"> Sekané masové biftečky na roštu, vařené brambory s máslem a šnitlíkem, hořčice, cibule, volské oko</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Špikované kuřecí prso zeleným chřestem a anglickou slaninou, celerové pyré s parmazánem, brokolice na másle</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky ve smetané omáčce s parmskou šunkou, nudličkami z pravé hovězí svíčkové na roštu,  strouhaný sýr Gran Moravia</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName"> Steak z vepřové kotlety na jemné pepřové omáčce, hranolky</td><td class="menuPrice">167,-</td></tr><tr><td class="menuWeight">ÚNOR</td><td class="menuName">Oslavte s námi v Šenkýrnách "Mokrej únor 2025"   Po celý únor neomezeně pro všechny 0,5L tankový ležák 11° Staropramen za 36,-Kč, Finlandia vodka 0,04L za 27,-Kč, super ceny plechovkových piv a jiné...  </td><td class="menuPrice">ÚNOR</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný uherákem, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 12,90,- Kč. Staropramen 11° za 13,90,- Kč a Staropramen 12° za 18,- Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda 27,-      0,5L Citronáda 34,-</td><td class="menuPrice"></td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Vepřová kapsa za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledováním našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažený sýr 45% plněný uherákem, vařené brambory s máslem a šnytlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Kapsa z vepřové pečeně plněná šunkou, sýrem a pórkem na grilu, smažené bramborové hranolky</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Muflon 13° Red ALE alk. 5,4% - svrchně kvašené pivo</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Šenkýrna střik (0,2l Zweigeltrebe rose / 0,3l sodovka s ledem)  </td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">0,3L Citronáda      0,5L Citronáda</td><td class="menuPrice">27,-/ 37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -24,12 +24,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/zabijacka2025.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -39,9 +43,39 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 16.2.2025 </div>
+<div class="nadpis">Pondělí 17.2.2025 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Čočková s uzeninou 1</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Medailonky z vepřové panenky, švestková omáčka, krokety 1, 7</div>
+<div class="cena">185 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Pečená krůtí prsa na slanině, bramborová kaše, celerová sláma  1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Rizoto s čerstvou zeleninou a filírovaným kachním prsíčkem na medu a rozmarýnu, hruškový kompot s červeným vínem a skořicí </div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>200g Grilovaný Hermelin, vařené brambory, pečená kořenová zelenina 1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>450g Pečené vykostěné vepřové koleno, křen, hořčice, kozí rohy, domácí chléb 1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -52,9 +86,29 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 16.2.2025 </div>
+<div class="nadpis">Pondělí 17.2.2025 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Dýňový krém </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Chilli con carne, rýže</div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí plátek, zeleninový kuskus, salátek</div>
+<div class="cena">150 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g pohankový salát se zeleninou a vejcem</div>
+<div class="cena">140 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -84,7 +138,7 @@ None
                             <h3>Otevírací doba</h3>
                             <p>Po – Ne: 11:00 – 23:00</p>
                         </div>
-                        <h3>Polední menu</h3>Buřt guláš s jarní cibulkou, domácí chleba  -   150 Kč<br>Slaná palačinka plněná špenátem, lososem, lanyzova burata -   210 Kč<br>Vepřový řízek se selskými brambory -   170 Kč<br>Pivní burger, hranolky -   199 Kč<br>Španělský ptáček s rýží -   199 Kč<br>Pinsa salámová s feferonky -   199 Kč<br>Kuřecí vývar s celitynskymi nudlemi -   45 Kč<br></div>
+                        <h3>Polední menu</h3>Slovenské halušky s brynzou a opečená slanina  -   140 Kč<br>club sendvič s kuřecím masem, čedar, vejce, anglická slanina, hranolky -   190 Kč<br>Smažená rybí Sibiřská treska s bramborovou kaší -   170 Kč<br>Míchaný zeleninový salát s bylinkovým tomato dresingem, kuřecí strypsy -   170 Kč<br>Burger s bylinkovým sýrem, hranolky kečup -   199 Kč<br>Pinsa Moravia -   199 Kč<br>Dýňová se zakysanou smetanou -   55 Kč<br></div>
 </td>
 </tr>
 </table>
